2023-02-28  Luigi Scarso  <luigi.scarso@gmail.com>

	* dvisvgm-src/src/ttf/Makefile.am (AM_CXXFLAGS): add ZLIB_INCLUDES,
	found with mingw cross-compile.

2022-11-05  Sam James  <sam@gentoo.org>

	* configure.ac (Ghostscript version): #include <stdlib.h>
	to declare exit and placate clang16.
	https://tug.org/pipermail/tlbuild/2022q4/005269.html

2022-08-29  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvisvgm-src/*, version.ac: 2.14; update sources and patches.

2021-06-26  Karl Berry  <karl@freefriends.org>

	* dvisvgm-src/libs/ff-woff/Makefile.am (AM_CFLAGS): use ZLIB_INCLUDES
	not ZLIB_CFLAGS (again).
	* dvisvgm-src/Makefile.am (AM_CXXFLAGS): use ZLIB_INCLUDES (again).
	* TLpatches/patch-08-makefiles: update.
	Report from Luigi Scarso.

2021-02-19  Karl Berry  <karl@freefriends.org>

	* configure.ac: AC_SEARCH_LIBS(clock_gettime, rt) for Solaris 10.
	https://tug.org/pipermail/tlbuild/2021q1/004830.html

2021-01-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvisvgm-src/*, version.ac: 2.11.1; update sources and patches.

2020-06-07  Karl Berry  <karl@freefriends.org>

	* configure.ac,
	* Makefile.am: omit $Id$ from generated Makefile.in.

2019-11-19  Martin Gieseking  <martin.gieseking@uos.de>

	* version.ac: 2.8.1; update sources and patches.

2019-05-07  Karl Berry  <karl@tug.org>

	* configure.ac (HAVE_LIBGS): reinstate setting for non-TL builds.
	From Ken Brown, tlbuild 21 Apr 2019 12:15:51.

2019-03-26  Karl Berry  <karl@freefriends.org>

	* dvisvgm-src/libs/ff-woff/Makefile.am (AM_CFLAGS): add ZLIB_INCLUDES.

2019-01-31  Karl Berry  <karl@freefriends.org>

	* Makefile.am (man_MANS): install dvisvgm.1.

2019-01-25  Karl Berry  <karl@freefriends.org>

	* version.ac: 2.6.2; import new tree, update patches.
	
2018-10-29  Karl Berry  <karl@freefriends.org>

	* version.ac: now 2.6.1. Import new upstream source tree.
	
	* configure.ac (HAVE_BROTLI, ..., HAVE_XXHASH): new conditionals.
	(DATE): October 2018 per upstream configure.ac.